unpackaged/main/default/objects/PDF_Viewer_Configuration__mdt/PDF_Viewer_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>PDF Viewer Configuration</label>
    <pluralLabel>PDF Viewer Configurations</pluralLabel>
</CustomObject>