unpackaged/main/default/objects/PDF_Viewer_Configuration__mdt/fields/Download_Button_Color__c.field-meta.xml
<CustomField>
    <fullName>Download_Button_Color__c</fullName>
    <description>Hex color code for the Download button (e.g., #0070D2)</description>
    <label>Download Button Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>