unpackaged/main/default/objects/PDF_Viewer_Configuration__mdt/fields/Email_Button_Color__c.field-meta.xml
<CustomField>
    <fullName>Email_Button_Color__c</fullName>
    <description>Hex color code for the Email button (e.g., #0070D2)</description>
    <label>Email Button Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>