unpackaged/main/default/objects/PDF_Viewer_Configuration__mdt/fields/File_Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>File_Name_Prefix__c</fullName>
    <description>Prefix used when saving the PDF file</description>
    <label>File Name Prefix</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>