unpackaged/main/default/objects/PDF_Viewer_Configuration__mdt/fields/Save_Button_Color__c.field-meta.xml
<CustomField>
    <fullName>Save_Button_Color__c</fullName>
    <description>Hex color code for the Save button (e.g., #0070D2)</description>
    <label>Save Button Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>