unpackaged/main/default/objects/PDF_Viewer_Configuration__mdt/fields/Show_Cancel_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Cancel_Button__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls visibility of the Cancel button</description>
    <label>Show Cancel Button</label>
    <type>Checkbox</type>
</CustomField>