unpackaged/main/default/objects/PDF_Viewer_Configuration__mdt/fields/Show_Download_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Download_Button__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls visibility of the Download PDF button</description>
    <label>Show Download Button</label>
    <type>Checkbox</type>
</CustomField>