unpackaged/main/default/objects/PDF_Viewer_Configuration__mdt/fields/Show_Email_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Email_Button__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls visibility of the Email PDF button</description>
    <label>Show Email Button</label>
    <type>Checkbox</type>
</CustomField>