unpackaged/main/default/objects/PDF_Viewer_Configuration__mdt/fields/Show_Save_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Save_Button__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls visibility of the Save PDF button</description>
    <label>Show Save Button</label>
    <type>Checkbox</type>
</CustomField>