unpackaged/main/default/objects/PDF_Viewer_Configuration__mdt/fields/Viewer_Header__c.field-meta.xml
<CustomField>
    <fullName>Viewer_Header__c</fullName>
    <description>This is the value you want displayed on the header of the PDF Viewer (ie. &quot;PDF Viewer&quot;)</description>
    <label>Viewer Header</label>
    <length>50</length>
    <type>Text</type>
</CustomField>